--- a/UnitTestProject1/GildedRoseTests.csproj
+++ b/UnitTestProject1/GildedRoseTests.csproj
@@ -55,9 +55,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\GildedRoseInn.csproj">
+    <ProjectReference Include="..\ClassLibrary1\GildedRose.csproj">
       <Project>{800d996e-6dce-457b-9119-9198ccc76a79}</Project>
-      <Name>GildedRoseInn</Name>
+      <Name>GildedRose</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
