--- a/ClassLibrary1/GildedRose.csproj
+++ b/ClassLibrary1/GildedRose.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemInventory.cs" />
     <Compile Include="GildedRoseInn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
