Gilded Rose Refactored pre-Object

--- a/UnitTestProject1/GildedRoseTests.csproj
+++ b/UnitTestProject1/GildedRoseTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{216AB81B-5E80-43F0-A587-9293B688272D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTestProject1</RootNamespace>
-    <AssemblyName>UnitTestProject1</AssemblyName>
+    <RootNamespace>GildedRoseTests</RootNamespace>
+    <AssemblyName>GildedRoseTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
