--- a/ClassLibrary1/GildedRose.csproj
+++ b/ClassLibrary1/GildedRose.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{800D996E-6DCE-457B-9119-9198CCC76A79}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>GildedRose</RootNamespace>
+    <AssemblyName>GildedRose</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ItemInventory.cs" />
+    <Compile Include="ItemNames.cs" />
     <Compile Include="GildedRoseInn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
